# CryptoFile

./: .gitignore  CMakeLists.txt  readme.md
src/: CryptoFile.cpp  CryptoFile.h  main.cpp
